--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ img{
     height: auto;
 }
 button{
-    color: white;
+    color: #fff;
     cursor: pointer;
     padding: 10px 25px;
     border-radius: 20px;
